--- a/style.css
+++ b/style.css
@@ -14,21 +14,104 @@ body{
   padding: 0 20px;
 }
 .mapSection{
-  padding: 100px 0 170px 0;
+  padding: 100px 0 80px 0;
+  text-align: center;
 }
 
+.relative{
+  position: relative;
+}
+.relative__border{
+  top: auto;
+  bottom: 68px;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 2px;
+  width: calc(100%);
+  position: absolute;
+  background: rgb(255,255,255);
+  background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%);
+}
+.mapSection__heading{
+  text-align: center;
+  color: #DDDDDD;
+  font-size: 40px;
+  line-height: 1.3;
+}
+.mapSection__span{
+  text-align: center;
+  color: #959595;
+  font-size: 32px;
+  line-height: 1.3;
+  margin-bottom: 30px;
+}
+.mapSection__img{
+  width: 17px;
+  height: auto;
+  margin-bottom: 100px;
+  text-align: center;
+}
 @media(max-width:1199px){
   .container {
     max-width: 768px;
   }
+  .mapSection__heading{
+    font-size: 34px;
+  }
+  .mapSection__span{
+    font-size: 26px;
+    margin-bottom: 15px;
+  }
+  .mapSection__img {
+    width: 14px;
+    margin-bottom: 60px;
+}
+.mapSection {
+  padding: 60px 0 60px 0;
+}
 }
 @media(max-width:767px){
   .container {
     max-width: 540px;
   }
+  .mapSection {
+    padding: 45px 0 35px 0;
+}
+
+  .relative__border{
+    bottom: 45px;
+    height: 1px;
+  }
+  .mapSection__heading {
+    font-size: 28px;
+}
+.mapSection__span {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+.mapSection__img {
+  width: 10px;
+  margin-bottom: 30px;
+}
 }
 @media(max-width:450px){
   .container {
     max-width: 370px;
+    padding: 0 15px;
   }
+  .mapSection__img {
+    width: 8px;
+    margin-bottom: 20px;
+}
+.relative__border {
+  bottom: 30px;
+  height: 1px;
+}
+.mapSection__heading {
+  font-size: 22px;
+}
+.mapSection__span {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
 }
