--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body{
   position: absolute;
   background: rgb(255,255,255);
   background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%);
+  z-index: -1;
 }
 .mapSection__heading{
   text-align: center;
