--- a/style.css
+++ b/style.css
@@ -17,7 +17,12 @@ body{
   padding: 100px 0 80px 0;
   text-align: center;
 }
-
+.chartjs-tooltip {
+  max-width: 50px !important; /* Adjust width */
+  min-width: 00px !important;
+  white-space: normal; /* Allow text wrapping */
+  text-align: center;
+}
 .relative{
   position: relative;
 }
