--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-body{
+
+body {
   background-color: #000;
 }
 
@@ -13,15 +14,17 @@ body{
   margin: 0 auto;
   padding: 0 20px;
 }
-.mapSection{
+
+.mapSection {
   padding: 100px 0 80px 0;
-  text-align: center;
   overflow-x: hidden;
 }
-.relative{
+
+.relative {
   position: relative;
 }
-.relative__border{
+
+.relative__border {
   top: auto;
   bottom: 68px;
   left: 50%;
@@ -29,32 +32,52 @@ body{
   height: 2px;
   width: calc(100%);
   position: absolute;
-  background: rgb(255,255,255);
-  background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 100%);
+  background: rgb(255, 255, 255);
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0) 100%);
+  z-index: -1;
+  /* width: 100%;
+  max-width: 1000px; */
+  margin-inline: auto;
+}
+.relative__border--x{
+  background-color: #fff;
+}
+.relative__border--y{
+  top: auto;
+  bottom: 0;
+  left: 0;
+  height: 100%;
+  width: 2px;
+  position: absolute;
+  background: rgb(255, 255, 255);
   z-index: -1;
 }
-.mapSection__heading{
-  text-align: center;
-  color: #DDDDDD;
-  font-size: 40px;
-  line-height: 1.3;
+.headingbox{
+  width: fit-content;
+  padding-left: 3vw;
 }
-.mapSection__span{
-  text-align: center;
+.mapSection__heading {
+  color: #DDDDDD;
+  font-size: 34px;
+  line-height: 1.3;
+  font-weight: 500;
+}
+
+.mapSection__span {
   color: #959595;
-  font-size: 32px;
+  font-size: 28px;
   line-height: 1.3;
   margin-bottom: 30px;
 }
-.mapSection__img{
+
+.mapSection__img {
   width: 17px;
   height: auto;
-  margin-bottom: 100px;
+  margin-bottom: 25px;
   text-align: center;
 }
 
 #chartjs-tooltip {
-  background: #333;
   border-radius: 10px;
   color: white;
   opacity: 1;
@@ -67,122 +90,178 @@ body{
   max-width: min-content;
   /* width: fit-content; */
   text-align: left;
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column; */
+  text-align: center;
 }
-.tooltipYearHeading{
+
+.tooltipYearHeading {
   font-size: 24px;
   font-weight: 400;
-  color: cyan;
-  margin-bottom:15px;
+  color: #fff;
+  padding: 7px 0;
+  margin-bottom: 8px;
+  background-color: #000;
+  width: fit-content;
+  margin-inline: auto;
 }
-.tooltipYeartagline{
-  font-size:20px;
+
+.tooltipYeartagline {
+  font-size: 16px;
   font-weight: 300;
+  background-color: #000;
+  padding: 10px 25px;
+  border: 1px solid #454b49;
+  border-radius: 100px;
 }
+
+/* #aiChart {
+  width: 100%;
+  max-width: 1000px;
+  margin-inline: auto;
+} */
+
 #aiChart canvas {
   transition: transform 0.3s ease-in-out;
 }
 
 #aiChart canvas:hover {
-  transform: scale(1.05); /* Slight zoom on hover */
+  transform: scale(1.05);
+  /* Slight zoom on hover */
 }
-@media(max-width:1599px){
+
+@media(max-width:1599px) {
   #chartjs-tooltip {
     min-width: 220px;
   }
 }
-@media(max-width:1399px){
+
+@media(max-width:1399px) {
   #chartjs-tooltip {
     min-width: 200px;
   }
-  .tooltipYearHeading{
+
+  .tooltipYearHeading {
     font-size: 22px;
-    margin-bottom:10px;
+    margin-bottom: 10px;
   }
-  .tooltipYeartagline{
-    font-size:18px;
+
+  .tooltipYeartagline {
+    font-size: 15px;
   }
 }
-@media(max-width:1199px){
+
+@media(max-width:1199px) {
   .container {
     max-width: 768px;
   }
-  .mapSection__heading{
+
+  .mapSection__heading {
     font-size: 34px;
   }
-  .mapSection__span{
+
+  .mapSection__span {
     font-size: 26px;
     margin-bottom: 15px;
   }
+
   .mapSection__img {
     width: 14px;
     margin-bottom: 60px;
+  }
+
+  .mapSection {
+    padding: 60px 0 60px 0;
+  }
 }
-.mapSection {
-  padding: 60px 0 60px 0;
-}
-}
-@media(max-width:767px){
+
+@media(max-width:767px) {
   .container {
     max-width: 540px;
   }
+
   .mapSection {
     padding: 45px 0 35px 0;
-}
+  }
 
-  .relative__border{
+  .relative__border {
     bottom: 45px;
     height: 1px;
   }
+  .relative__border--y{
+    width: 1px;
+  }
   .mapSection__heading {
     font-size: 28px;
+  }
+
+  .mapSection__span {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+
+  .mapSection__img {
+    width: 10px;
+    margin-bottom: 10px;
+  }
+
+  #chartjs-tooltip {
+    min-width: 170px;
+  }
+
+  .tooltipYearHeading {
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+
+  .tooltipYeartagline {
+    font-size: 13px;
+    padding: 5px 10px;
+  }
 }
-.mapSection__span {
-  font-size: 20px;
-  margin-bottom: 10px;
-}
-.mapSection__img {
-  width: 10px;
-  margin-bottom: 30px;
-}
-#chartjs-tooltip {
-  min-width: 170px;
-}
-.tooltipYearHeading{
-  font-size: 18px;
-  margin-bottom:10px;
-}
-.tooltipYeartagline{
-  font-size:16px;
-}
-}
-@media(max-width:450px){
+
+@media(max-width:450px) {
   .container {
-    max-width: 370px;
+    max-width: 420px;
     padding: 0 15px;
   }
+  .mapSection .container{
+    padding: 0;
+  }
+
   .mapSection__img {
     width: 8px;
-    margin-bottom: 20px;
-}
-.relative__border {
-  bottom: 30px;
-  height: 1px;
-}
-.mapSection__heading {
-  font-size: 22px;
-}
-.mapSection__span {
-  font-size: 16px;
-  margin-bottom: 10px;
-}
-#chartjs-tooltip {
-  min-width: 140px;
-}
-.tooltipYearHeading{
-  font-size: 16px;
-  margin-bottom:10px;
-}
-.tooltipYeartagline{
-  font-size:13px;
-}
+    margin-bottom: 10px;
+  }
+
+  .relative__border {
+    bottom: 24px;
+    width: calc(100% - 10px);
+    height: 1px;
+  }
+  .relative__border--y{
+    width: 1px;
+    left: 5px;
+  }
+  .mapSection__heading {
+    font-size: 22px;
+  }
+
+  .mapSection__span {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+
+  .tooltipYearHeading {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+
+  .tooltipYeartagline {
+    font-size: 12px;
+    padding: 5px 10px;
+  }
 }
