--- a/style.css
+++ b/style.css
@@ -140,13 +140,9 @@ body {
 }
 
 @media(max-width:1399px) {
-  #chartjs-tooltip {
-    min-width: 200px;
-  }
-
   .tooltipYearHeading {
     font-size: 22px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
 
   .tooltipYeartagline {
@@ -214,7 +210,7 @@ body {
 
   .tooltipYearHeading {
     font-size: 18px;
-    margin-bottom: 10px;
+    margin-bottom: 0;
   }
 
   .tooltipYeartagline {
@@ -257,7 +253,6 @@ body {
 
   .tooltipYearHeading {
     font-size: 16px;
-    margin-bottom: 10px;
   }
 
   .tooltipYeartagline {
